Fixed installation progress bar.

--- a/steam/mt-steam-tweaks.css
+++ b/steam/mt-steam-tweaks.css
@@ -134,7 +134,7 @@
 }
 
 /* fade uninstalled games */
-[class*='appportrait_Draggable'] [class*='appportrait_UninstalledBar'][class*='appportrait_UninstalledBarBottom'] {
+[class*='appportrait_Draggable'] [class*='appportrait_UninstalledBar'][class*='appportrait_UninstalledBarBottom']:not([class*='appportrait_BarDownloading']) {
   background: #24282fCC;
   border-radius: var(--cover-border-radius);
   bottom: 0;
