--- a/steam/mt-steam-tweaks.css
+++ b/steam/mt-steam-tweaks.css
@@ -6,6 +6,19 @@
   --context-menu-padding: 6px 12px;
 }
 
+/* evenly sized header buttons */
+[class*='titlebarcontrols_Button'] {
+  padding: 0;
+}
+
+/* hide big picture toggle */
+[class*='titlebarcontrols_AccountMenu'] {
+  margin-right: 0 !important;
+}
+[class*='titlebarcontrols_GamepadUIToggle'] {
+  display: none !important;
+}
+
 /* hide favorites collection */
 [class*='libraryhomeshowcases_ShowcaseGrid_'][style*='grid-auto-rows: 148px;'] > [class*='allcollections_Collection_']:first-of-type {
   display: none !important;
