--- a/steam/libraryroot.custom.css
+++ b/steam/libraryroot.custom.css
@@ -1,2 +1,2 @@
-@import url('mt-steam-tweaks.css');
-/* @import url('mt-steam-theme.css'); */
+@import url('./custom-css/tweaks.css');
+/* @import url('./custom-css/theme.css'); */
