Added style to reduce overlay toolbar spacing.

--- a/steam/custom-css/tweaks.css
+++ b/steam/custom-css/tweaks.css
@@ -175,3 +175,9 @@
 [class*="appportrait_UninstalledBarBottom"] {
   margin-top: 0 !important;
 }
+
+/* reduce overlay toolbar spacing */
+[class*="steamdesktopoverlay_ToolbarContainer_"][class*='steamdesktopoverlay_LocationBottom_'] {
+  bottom: 7px;
+}
+
