--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -61,6 +61,7 @@
 /* */
 
 /* custom cover sizes */
+/* custom cover sizes: grid */
 [class*='libraryhomeshowcases_ShowcaseGrid'] {
   gap: var(--grid-gap) !important;
   grid-template-columns: repeat(auto-fill, var(--cover-width)) !important;
@@ -85,6 +86,23 @@
 [class*='allcollections_Collection_']
   [class*='allcollections_CollectionLabel_'] {
   width: calc(100% - 20px);
+}
+
+/* custom cover sizes: recent games */
+[class*='libraryhomeshowcases_Showcase_']
+  [class*='libraryhomeshowcases_ChildrenContainer_'] {
+  margin: 0 5px !important;
+}
+[class*='libraryhomerecentgames_RecentGame_']:not(:last-child) {
+  margin-right: var(--grid-gap);
+}
+[class*='libraryhomerecentgames_RecentGameMediaContainer_'][style*='width: 311.984px'] {
+  width: calc(var(--cover-width) * 2 + var(--grid-gap)) !important;
+  height: var(--cover-height) !important;
+}
+[class*='libraryhomerecentgames_RecentGameMediaContainer_'][style*='width: 148px;'] {
+  width: var(--cover-width) !important;
+  height: var(--cover-height) !important;
 }
 /* */
 
