Fixed evenly sized header buttons rule not affecting family mode.

--- a/steam/custom-css/general.css
+++ b/steam/custom-css/general.css
@@ -6,6 +6,10 @@
 [class*='titlebarcontrols_Button'] {
   padding: 0;
 }
+[class*='titlebarcontrols_ParentalToggleButton'],
+[class*='titlebarcontrols_KioskModeToggleButton'] {
+  min-width: 24px;
+}
 
 /* hide big picture toggle */
 [class*='titlebarcontrols_AccountMenu'] {
