--- a/steam/custom-css/overlay.css
+++ b/steam/custom-css/overlay.css
@@ -1,27 +1,29 @@
 /* reduce overlay toolbar spacing */
-[class*='steamdesktopoverlay_ToolbarContainer_'][class*='steamdesktopoverlay_LocationBottom_'] {
+.steamdesktopoverlay_ToolbarContainer_.steamdesktopoverlay_LocationBottom_ {
   bottom: 7px;
 }
 
 /* hide achievement date in sidebar */
-[class*='achievementslist_AchievementListItemBase_'] [class*='achievementslist_Container_'] [class*='achievementslist_Right_'] {
+.achievementslist_AchievementListItemBase_
+  .achievementslist_Container_
+  .achievementslist_Right_ {
   display: none;
 }
 
 /* tweaks to achievements for better responsiveness */
-[class*='achievementslist_AchievementListItemBase_'] [class*='achievementslist_Container_'] {
+.achievementslist_AchievementListItemBase_ .achievementslist_Container_ {
   gap: 12px;
   padding: 4px 12px;
 }
 
 /* hide toolbar unless hovered */
-/*[class*="steamdesktopoverlay_ToolbarContainer_"][class*='steamdesktopoverlay_LocationBottom_'] {
+/*[class*="steamdesktopoverlay_ToolbarContainer_"].steamdesktopoverlay_LocationBottom_ {
   bottom: 8px;
   margin-bottom: -72px;
   padding-top: 8px;
   transition: 150ms;
 }
-[class*="steamdesktopoverlay_ToolbarContainer_"][class*='steamdesktopoverlay_LocationBottom_']:hover {
+[class*="steamdesktopoverlay_ToolbarContainer_"].steamdesktopoverlay_LocationBottom_:hover {
   margin-bottom: 0;
 }
 
