--- a/steam/custom-css/theme.css
+++ b/steam/custom-css/theme.css
@@ -3,11 +3,11 @@
   --c-sidebar: #171718;
 }
 
-[class*='libraryhome_InnerContainer'],
-[class*='libraryhome_UpdatesContainer'] {
+.libraryhome_InnerContainer,
+.libraryhome_UpdatesContainer {
   background: var(--c-background) !important;
 }
 
-[class*='gamelistbar_Container'] {
+.gamelistbar_Container {
   background: var(--c-sidebar) !important;
 }
