Reformatted output files.

--- a/steam/custom-css/overlay.css
+++ b/steam/custom-css/overlay.css
@@ -1,10 +1,7 @@
-
 ._3OzkVrQFFPv0aV41N4MrHV._1kICdMcVupzY5a9PzI2JIU {
   bottom: 7px;
 }
-._2Kmn7fJOkLT4KyWl467a9M
-  .cvw8DHMUBKuZs5DeLJOQ2
-  .k02sevxj1a1YpBto7_V57 {
+._2Kmn7fJOkLT4KyWl467a9M .cvw8DHMUBKuZs5DeLJOQ2 .k02sevxj1a1YpBto7_V57 {
   display: none;
 }
 ._2Kmn7fJOkLT4KyWl467a9M .cvw8DHMUBKuZs5DeLJOQ2 {
