--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -98,8 +98,7 @@
   width: var(--cover-width) !important;
   height: var(--cover-height) !important;
 }
-._2XftMcBO9aY7VXCivzuW7-
-  ._1R9r2OBCxAmtuUVrgBEUBw.ZsU8nIIpj8MJn0vzMzSp1 {
+._2XftMcBO9aY7VXCivzuW7- ._1R9r2OBCxAmtuUVrgBEUBw.ZsU8nIIpj8MJn0vzMzSp1 {
   padding-top: calc(var(--cover-height) - 76px);
 }
 .WYgDg9NyCcMIVuMyZ_NBC {
@@ -153,9 +152,7 @@
   padding: 0;
 }
 ._1pwP4eeP1zQD7PEgmsep0W
-  .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd:not(
-    ._3BNwjsy5WltxayFptkx3KF
-  ) {
+  .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd:not(._3BNwjsy5WltxayFptkx3KF) {
   background: #24282f;
   display: block;
   height: 100%;
@@ -166,8 +163,7 @@
 }
 ._54PuCatl_tYG836TOs4Mv
   .WYgDg9NyCcMIVuMyZ_NBC:hover:not(
-    ._3VOR2AeYATx3qSE0I-Pm-5
-      .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd
+    ._3VOR2AeYATx3qSE0I-Pm-5 .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd
   ) {
   transform: rotateX(3deg) translateZ(15px);
 }
